--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,7 +33,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-3 col-md-3 col-sm-12">
             <h1 id="mainHeader">Explore <br /><span> Hong Kong </span><br /> Like a Local</h1><br /><br />
-            <img src="../assets/png/001-backpack.png" id="backpacker">
+
             <div id="signUpDiv">
                 <p><strong>Sign up here!</strong></p>
                 <form action="/signUp" method="post">
@@ -57,14 +57,58 @@
                         <h2 id="calling">Calling all HK-ers!</h2>
                         <ul>
                             <li>
-                                Sign Up and share your HK experience with Others.
+                                Sign Up, <u><b>share</b></u> your HK experience with others and get your reward!
+                            </li>
+                            <li>
+                                <u><b>Discover</b></u> new cool places of HK from your fellow HK-ers
+                            </li>
+                            <li>
+                                Have you content rated by the community and <u><b>featured</b></u> on the front page!
                             </li>
                         </ul>
-
                     </div>
-                    <div class="content" id="topRight"></div>
-                    <div class="content" id="btmLeft"></div>
-                    <div class="content" id="btmRight"></div>
+
+                    <div class="content contentCard text-white" id="topRight">
+                        <div class="overlay">
+                            <h5 class="card-title">Dried Seafood Street</h5>
+                            <p class="card-text">Des Voeux Road West, Wing Lok and Ko Shing Streets are known as Dried
+                                Seafood Street and Tonic Food Street. A section of
+                                Des Voeux Road West in Sheung Wan is packed with shops selling dried seafood. The
+                                origins of the trade in this area go
+                                back many decades, to when the products were dried on the rooftops, to be sold in the
+                                street-level stores. Black moss,
+                                salted fish, sausage, scallops ... <a href="#"><b>Click to read
+                                        more</b></a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content contentCard text-white" id="btmLeft">
+                        <div class="overlay">
+                            <h5 class="card-title">HK's Shop Cats</h5>
+                            <p class="card-text">The whimsical life of Hong Kong’s shop cats is showcased in a new book
+                                by a Dutch photographer after his portraits
+                                gathered thousands of fans worldwide on Instagram. Marcel Heijnen’s book includes scores
+                                of portraits of the city’s felines keeping their owners company at work. The 52-year-old
+                                photographer, who lives in Sai Ying Pun, shot to internet fame at ... <a
+                                    href="#"><b>Click to read
+                                        more</b></a></p>
+                        </div>
+                    </div>
+                    <div class="content" id="btmRight">
+                        <h2 id="calling">Our dear travellers</h2>
+                        <ul>
+                            <li>
+                                Sign Up and discover new cool places the locals love!
+                            </li>
+                            <li>
+                                Find the best and hottest deals in town
+                            </li>
+                            <li>
+                                Ask, and your question shall be answered
+                            </li>
+
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
