--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -59,13 +59,20 @@
                     <h2 id="calling">Calling all HK-ers!</h2>
                     <ul>
                         <li>
-                            Sign Up, <u><b>share</b></u> your HK experience with others and get your reward!
+                            Sign Up, <span class="halfHighlightGreen">share</span> your HK experience with others and
+                            get
+                            your
+                            <span class="halfHighlightGreen">reward</span>!
                         </li>
                         <li>
-                            <u><b>Discover</b></u> new cool places of HK from your fellow HK-ers
+                            <span class="halfHighlightGreen">Discover</span> new cool places of HK from your fellow
+                            HK-ers
                         </li>
                         <li>
-                            Have you content rated by the community and <u><b>featured</b></u> on the front page!
+                            Have you content rated by the community and <span class="halfHighlightGreen">featured</span>
+                            on
+                            the front
+                            page!
                         </li>
                     </ul>
                 </div>
@@ -106,13 +113,14 @@
                     <h2 id="calling">Our dear travellers</h2>
                     <ul>
                         <li>
-                            Sign Up and discover new cool places the locals love!
+                            Sign Up and <span class="halfHighlightGreen">discover</span> new cool places the locals
+                            love!
                         </li>
                         <li>
-                            Find the best and hottest deals in town
+                            Find the <span class="halfHighlightGreen">best and hottest deals</span> in town
                         </li>
                         <li>
-                            Ask, and your question shall be answered!
+                            <span class="halfHighlightGreen">Ask</span>, and your question shall be answered!
                         </li>
 
                     </ul>
