minor changes before v.2

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,4 @@
-{{!-- navbar --}}
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto" id="navbarList">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Explore </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Log In </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Join</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+{{>navLanding}}
 {{!-- clouds in the background --}}
 <br />
 <br /><br />
