--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <!-- custom -->
-    <link rel="stylesheet" href="./assets/style.css" />
+    {{!-- landing page --}}
+    <link rel="stylesheet" href="./assets/styleLanding.css" />
+    <link rel="stylesheet" href="./assets/styleLandingNav.css" />
+
 </head>
 
 <body>
