--- a/views/partials/navLanding.handlebars
+++ b/views/partials/navLanding.handlebars
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto" id="navbarList">
             <li class="nav-item">
-                <a class="nav-link" href="#">Explore </a>
+                <a class="nav-link" href="/dashboard">Explore </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Log In </a>
