most updated ver, not fully modile responsive yet

--- a/assets/styleLanding.css
+++ b/assets/styleLanding.css
@@ -55,7 +55,7 @@ body {
 #gemstone {
 	height: 80px;
 }
-#mainHeader span:hover {
+#HK:hover {
 	background: #494949;
 	color: #fff;
 	text-shadow: none;
