complete dashboard style

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="./assets/styleLanding.css" />
     <link rel="stylesheet" href="./assets/styleLandingNav.css" />
     <link rel="stylesheet" href="./assets/styleFooter.css" />
+    {{!-- dashboard --}}
+    <link rel="stylesheet" href="./assets/styleDashboard.css">
 
 
 </head>
