--- a/views/partials/navLanding.handlebars
+++ b/views/partials/navLanding.handlebars
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto" id="navbarList">
             <li class="nav-item">
-                <a class="nav-link" href="/dashboard">Explore </a>
+                <a class="nav-link" href="/explore">Explore </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Log In </a>
+                <a class="nav-link" class="navLogIn" href="#signUpDiv">Log In </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Join</a>
+                <a class="nav-link" class="navSignUp" href="#signUpDiv">Join</a>
             </li>
         </ul>
     </div>
