--- a/assets/styleDashboard.css
+++ b/assets/styleDashboard.css
@@ -1,3 +1,60 @@
+body {
+	background-image: linear-gradient(
+		to bottom,
+		#40a9e6,
+		#40a9e6 80%,
+		#008020 20%
+	);
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	font-family: "Open Sans";
+	color: #fff;
+	overflow-x: hidden;
+}
+
+/* nav */
+nav {
+	font-family: "Open Sans";
+	font-weight: 500;
+	opacity: 1;
+	color: #fff;
+}
+
+.nav-item {
+	padding: 0 10px;
+	transition: all 0.5s ease-in-out;
+}
+
+.nav-item::after {
+	content: "";
+	position: relative;
+	top: -40%;
+	width: 100%;
+	height: 15px;
+	background: #00e23986;
+	display: block;
+	transform-origin: right top;
+	transform: scale(0, 1);
+	transition: transform 0.4s cubic-bezier(1, 0, 0, 1);
+	z-index: -1;
+}
+
+.nav-item:hover::after {
+	transform-origin: left top;
+	transform: scale(1, 1);
+}
+
+/* clouds to animate */
+.cloudDiv {
+	position: fixed;
+	z-index: -5;
+	left: -15vh;
+}
+.cloud {
+	height: 10vh;
+	left: -15vh;
+}
+/* content */
 .outerDBContainer {
 	margin-top: 12vh;
 }
