--- a/assets/styleLanding.css
+++ b/assets/styleLanding.css
@@ -12,6 +12,38 @@ body {
 	overflow-x: hidden;
 }
 
+/* nav */
+nav {
+	font-family: "Open Sans";
+	font-weight: 500;
+	opacity: 1;
+	color: #fff;
+}
+
+.nav-item {
+	padding: 0 10px;
+	transition: all 0.5s ease-in-out;
+}
+
+.nav-item::after {
+	content: "";
+	position: relative;
+	top: -40%;
+	width: 100%;
+	height: 15px;
+	background: #00e23986;
+	display: block;
+	transform-origin: right top;
+	transform: scale(0, 1);
+	transition: transform 0.4s cubic-bezier(1, 0, 0, 1);
+	z-index: -1;
+}
+
+.nav-item:hover::after {
+	transform-origin: left top;
+	transform: scale(1, 1);
+}
+
 /* clouds to animate */
 .cloudDiv {
 	position: fixed;
@@ -244,6 +276,25 @@ body {
 	background-size: cover;
 	background-position: center;
 	transform: rotateY(180deg);
+}
+/* footer */
+footer {
+	margin-top: 11%;
+	display: block;
+	height: 10vh;
+	text-align: center;
+	font-family: "Open Sans";
+	font-size: 0.8em;
+}
+
+a {
+	text-decoration: none;
+	color: #fff;
+}
+
+a:hover {
+	text-decoration: underline;
+	color: #fff;
 }
 
 @media only screen and (max-width: 600px) {
