--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,10 +72,12 @@
             <div class="col-lg-5 col-md-10 col-sm-10 signUpContainer">
                 <div id="signUpDiv">
                     <p id="signUpDivTitle"><strong>Sign up here!</strong></p>
-                    <!-- #if errors-->
-                    <!-- <p id="errorMessage">message</p> -->
-                    <!-- {{/if}} -->
-                    <form action="/users/register" method="post">
+    <ul>
+        <% if(typeof errors != 'undefined') { %> <% errors.forEach(errors =>{ %>
+        <li><%= errors.message %></li>
+        <% }) %> <% } %>
+    </ul>
+                    <form action="/register" method="post">
                         <input type="text" name="username" id="username" placeholder="USERNAME" required><br />
                         <input type="password" name="password" id="password" placeholder="PASSWORD" required><br />
                         <input type="password" name="confirmPassword" id="confirmPassword"
