--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,28 +71,49 @@
             <!-- top right content (sign up div) -->
             <div class="col-lg-5 col-md-10 col-sm-10 signUpContainer">
                 <div id="signUpDiv">
-                    <p id="signUpDivTitle"><strong>Sign up here!</strong></p>
-    <ul>
-        <% if(typeof errors != 'undefined') { %> <% errors.forEach(errors =>{ %>
-        <li><%= errors.message %></li>
-        <% }) %> <% } %>
-    </ul>
-                    <form action="/register" method="post">
+                <div class="tabs">
+  <div class="tab-2">
+       <!-- sign up -->
+    <label for="tab2-1">Sign Up</label>
+    <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
+    <div>
+       
+                      <p id="signUpDivTitle"><strong>Sign up here!</strong></p>
+                <ul>
+                    <% if(typeof errors != 'undefined') { %> <% errors.forEach(errors =>{ %>
+                    <li><%= errors.message %></li>
+                     <% }) %> <% } %>
+                </ul> 
+                     <form action="/register" method="POST">
                         <input type="text" name="username" id="username" placeholder="USERNAME" required><br />
-                        <input type="password" name="password" id="password" placeholder="PASSWORD" required><br />
-                        <input type="password" name="confirmPassword" id="confirmPassword"
+                        <input type="email" name="email" id="emailReg" placeholder="EMAIL" required><br />
+                        <input type="password" name="password" id="passwordReg" placeholder="PASSWORD" required><br />
+                     <input type="password" name="confirmPassword" id="confirmPassword"
                             placeholder="CONFIRM PASSWORD" required><br />
-                        <input type="email" name="email" id="email" placeholder="EMAIL" required><br />
-                        <button type="submit" id="signUpBtn">Join Now</button><br />
+                        <button type="submit" id="signUpBtn">Join Now</button><br /></form>
                         <button type="button" name="fbSignUp" class="oAuthSignUp">Join with Facebook</button>
-                        <button type="button" name="googleSignUp" class="oAuthSignUp">Join with Google</button><br />
+                        <button type="button" name="googleSignUp" class="oAuthSignUp">Join with Google</button><br /> <!--!FIX THIS-->
                         <span>By signing up, you agree to the <a href="#">Terms</a> and <a href="#">Privacy
                                 Policy</a>.</span>
-                    </form>
-                </div>
-            </div>
-        </div>
     </div>
+  </div>
+  <div class="tab-2">
+    <!-- log in -->
+    <label for="tab2-2">Log In</label>
+    <input id="tab2-2" name="tabs-two" type="radio">
+    <div>
+      <p id="logInDivTitle"><strong>Log in here!</strong></p>
+                    <form action="/login" method="POST">
+                        <input type="email" name="email" id="emailLogin" placeholder="EMAIL" required><br />
+                        <input type="password" name="password" id="passwordLogin" placeholder="PASSWORD" required><br />
+                        <button type="submit" id="logInBtn">Log In</button><br /></form>
+    </div>
+  </div>
+</div>
+                </div>
+             </div>
+
+
     <!-- bottom content -->
     <div class="container-fluid outerContainer">
         <!-- second row  -->
